[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", featuers = ["full"] }
mini-redis = "0.4.1"
bytes = "1.4.0"
rand = "0.8.5"
crossbeam = "0.8.2"
tokio-stream = "0.1.14"